--- a/assets/sass/_partials/_custom.scss
+++ b/assets/sass/_partials/_custom.scss
@@ -1,185 +1,13 @@
 //Custom stuff.
-//Basically any changes that are happening after the style sheet goes live.
-//Gravity Form Section
- #sidebar {
-	margin-bottom: 20px;
-	.gfield_required {
-		//display:none;
 
-	}
-	.ginput_container {
-		input {
-			border: none;
-		}
-		textarea {
-			border: none;
-		}
-		.gquestion & {
-			background: $w;
-			padding: 5px;
-			color: $b;
-		}
-	}
-	#gform_fields_1 {
-		ul {
-			li {
-				&.gfield {
-					margin-top: -10px;
-				}
-			}
-		}
-	}
-	.ginput_counter {
-		color: $w;
-	}
-	.gform_wrapper .gform_footer {
-		margin: 0 !important;
-		padding: 0 !important;
-		background: $w;
-	}
-	#gform_1 {
-		padding-bottom: 10px;
-	}
-}
 
-//titles
 
-.mrc_title, .ems_title{
-	margin-top:0px;
-}
-//side navigation
-#sidenav {
-	h2 {
-		img {
-			margin-top: -5px;
-		}
-		a {
-			color: $lightblue;
-			&:hover {
-				color: $w;
-				text-decoration: none;
-			}
-		}
-	}
-	.current_page_item {
-		a {
-			font-weight: 800;
-		}
-	}
-}
-//search
-.search-form {
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-//new shortcodes
-.arrowheader {
-	display: block;
-	height: 40px;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	clear: both;
-	.arrow {
-		//display: inline-block;
-		float: left;
-	}
-	.acontent {
-		letter-spacing: 1px;
-		background: $orange;
-		color: $w;
-		font-weight: 600;
-		padding: 9px 10px 10px;
-		width: 88%;
-		height: 40px;
-		font-size: 10px !important;
-	}
-	.astart {
-		//padding:8px 8px 13px;
-		height: 40px;
-		width: 4%;
-	}
-	.aend {
-		//padding:8px 7px 13px;
-		height: 40px;
-		width: 4%;
-	}
-}
-.arrowbut {
-	margin-top: 10px;
-	margin-bottom: 30px;
-	text-decoration: none;
-	clear: both;
-	@include transition(1, 1s, 0);
-	.arrow {
-		//display: inline-block;
-		float: left;
-	}
-	.astart {
-		height: 40px;
-	}
-	.aend {
-		height: 40px;
-	}
-	&:hover {
-		.acontent {
-			background: $darkblue;
-		}
-		.triangle-right {
-			&.white {
-				background: $darkblue;
-			}
-			&.orange {
-				border-left: 11px solid $darkblue;
-			}
-		}
-	}
-}
-//breadcrumb
-.breadcrumbs {
-	//font-weight: 800;
-	padding-bottom: 20px;
-	color: $lightblue;
-	a {
-		color: $darkblue;
-	}
-	span[typeof="v:Breadcrumb"] {
-		&:before {
-			content: " \f105 ";
-			//font-weight: 800;
-			font-family: FontAwesome;
-			padding-left: 5px;
-			padding-right: 2px;
-			font-size: 20px;
-		}
-	}
-}
-.triangle-right {
-	width: 0;
-	height: 0;
-	border-bottom: 20px solid transparent;
-	border-top: 20px solid transparent;
-	&.white {
-		content: " \f101 ";
-		font-weight: 800;
-		font-family: FontAwesome;
-		padding-left: 5px;
-		padding-right: 2px;
-		font-size: 20px;
-		border-left: 11px solid $w;
-		background: $orange;
-	}
-	&.orange {
-		border-left: 11px solid $orange;
-	}
-}
-.ai1ec-posterboard-view footer:after {
-	background: none;
-}
 //OVERWRITES
 #sidenav {
 	z-index: 1000;
 }
 .menu-item-158 {
+	
 	a {
 		background: $orange;
 		color: $w !important;
@@ -189,162 +17,9 @@
 		}
 	}
 }
-@media only screen and (max-width: 400px) {
-	.row {
-		//margin-left: -30px;
-		//margin-right: -30px;
 
-	}
-	.ai1ec-posterboard-view {
-		width: 100% !important;
-	}
-	.ai1ec-event.ai1ec-event-id-68.ai1ec-event-instance-id-1 {
-		width: 100% !important;
-	}
-	.ai1ec-event-title {
-		font-size: 20px !important;
+#menu-item-158 {
+	@media only screen and (max-width : 993px) {  
+		display:none;
 	}
 }
-//featured carosoul
-.carousel-control {
-	&.right {
-		background-image: none !important;
-	}
-	&.left {
-		background-image: none !important;
-	}
-	i {
-		color: $orange;
-		&.fa-circle {
-			color: $w;
-		}
-	}
-	img {@include border-radius(0);}
-}
-.carousel-indicators li {
-	border-color: $darkblue !important;
-	&.active {
-		background: $darkblue !important;
-	}
-}
-.carousel-inner {
-	height: 650px;
-	// background:$b;
-	@media only screen and (max-width: 500px) {
-		height: 800px;
-	}
-	.content {
-		text-align: center;
-		width: 100%;
-		header {
-			background: $lightblue;
-			padding: 10px;
-			h1 {
-				color: $w;
-			}
-		}
-		article {
-			padding: 20px;
-		}
-		.image_container {
-			max-height: 300px;
-			width: 100%;
-			overflow: hidden;
-			img {
-				max-height: 300px;
-				width: 100%;
-				@include border-radius(0);
-			}
-		}
-	}
-	.ai1ec-posterboard-view .ai1ec-event-wrap {
-		margin: 0;
-		padding: 0;
-		opacity: 1.0;
-		.ai1ec-event-title {
-			background: $lightblue !important;
-			padding: 30px 30px 28px !important;
-			text-align: center !important;
-			font-weight: 800;
-			a {
-				color: $w !important;
-				font-size: 36px !important;
-			}
-		}
-	}
-}
-.down {
-	position: absolute;
-	top: 67%;
-	//margin-top:-50px;
-	//z-index:10000 !important;
-	img {
-		height: 20px;
-		margin-top: 17px;
-		width: auto;
-	}
-	&.left {
-		margin-left: -63px;
-		img {
-			margin-left: 22px;
-		}
-	}
-	&.right {
-		margin-left: 15px;
-		img {
-			margin-left: 15px;
-		}
-	}
-}
-.carousel-control {
-	opacity: 1.0 !important;
-	text-shadow: none !important;
-	height: 50%;
-}
-.ai1ec-posterboard-view {
-	width: 100% !important;
-	.ai1ec-event {
-		width: 100% !important;
-		.ai1ec-event-avatar {
-			max-height: 300px;
-			width: 100%;
-			overflow: hidden;
-			img {
-				max-height: 300px !important;
-				height: 300px !important;
-				width: 100%;
-			}
-		}
-		.ai1ec-event-time,
-		.ai1ec-event-description {
-			text-align: center;
-			padding: 10px;
-		}
-	}
-}
-.ai1ec-posterboard-view .ai1ec-event .post-edit-link {
-	top: 20px;
-	height: 23px;
-}
-.contact textarea,
-.contact input {
-	border: thin solid;
-	border-radius: 5px;
-}
-.blog .seperate {
-	background: $lightblue;
-	height: 1px;
-	margin: auto;
-	margin-top: 50px;
-	margin-bottom: 40px;
-	width: 80%;
-}
-.active_title {
-	color: $w !important;
-}
-.large_photo .title {
-	margin-top: 20px !important;
-}
-
-
-
